[tool.poetry]
name = "hass-miner"
version = "1.3.1"
description = ""
authors = ["Michael Schmid <michael@amazee.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.2.0,<3.14"
homeassistant = "^2025.7.3"
colorlog = "^6.9.0"
ruff = "^0.12.5"
pyasic = "0.78.8"
paho-mqtt = "^2.1.0"
setuptools = "^80.9.0"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
